Small tweaks to the home page

--- a/m4d/Views/Home/Index.cshtml
+++ b/m4d/Views/Home/Index.cshtml
@@ -126,19 +126,25 @@
 
 <div class="row col-xs-12"><hr /></div>
 <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
+        <a href="https://www.music4dance.net/home/contribute">
+            <img src="~/Content/contribute.png" alt="contribute" width="128" height="128" class="center-block" />
+            <h2 class="blog center-block" style="text-align: center">Contribute</h2>
+        </a>
+    </div>
+    <div class="col-sm-3">
         <a href="#music">
             <img src="~/Content/music.png" alt="music" width="128" height="128" class="center-block" />
             <h2 class="music center-block" style="text-align: center">Music</h2>
         </a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
         <a href="#tools">
             <img src="~/Content/tools.png" alt="tools" width="128" height="128" class="center-block" />
             <h2 class="tools center-block" style="text-align: center">Tools</h2>
         </a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
         <a href="#info">
             <img src="~/Content/info.png" alt="info" width="128" height="128" class="center-block" />
             <h2 class="blog center-block" style="text-align: center">Info</h2>
@@ -159,11 +165,13 @@
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find out what dance styles can be danced to a song.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/song-list/") @SmartLink.Posts("https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Start with a musical genre (or other tags) and find songs to dance a particular style.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/tag") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/tag") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/tag/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find wedding songs and match them with dance styles.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/wedding-music") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/wedding/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find songs that match competion tempo ranges.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/ballroom-competition-categories") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-category/") @SmartLink.Posts("https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/")</dd>
+        <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Vote on what style you would dance to any song in our catalog.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/signup") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tags/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/vote/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Tag songs to create your own ways of making song lists</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/signup") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-editing/") @SmartLink.Posts("https://www.music4dance.net/blog/lets-tag-some-songs/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find holiday music to dance to.</dt>
