Initial implementation of captcha

--- a/m4d/Views/Account/SignIn.cshtml
+++ b/m4d/Views/Account/SignIn.cshtml
@@ -65,10 +65,10 @@
     </div>
 </div>
 
-@section styles{
+@section Styles{
     <link href="~/Content/auth-buttons.css" rel="stylesheet" type="text/css">
 }
 
-@section scripts {
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
