--- a/m4d/Views/Account/SignUp.cshtml
+++ b/m4d/Views/Account/SignUp.cshtml
@@ -1,7 +1,14 @@
-﻿@using m4d.ViewModels
+﻿@using m4d.ViewModels;
+@using CaptchaMvc.HtmlHelpers;
+@using CaptchaMvc.Interface;
+
 @model RegisterViewModel
 @{
+    // TODONEXT: Why don'te we need CaptchMVc.Interface
+    //  What other pages require captcha
+    //  More testing - is email getting registered before captcha step?
     ViewBag.Title = "Sign Up";
+    var captcha = Html.Captcha(5);
 }
 
 
@@ -29,9 +36,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m =>m.ConfirmEmail, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.ConfirmEmail, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.ConfirmEmail, new {@class = "form-control" })
+                        @Html.TextBoxFor(m => m.ConfirmEmail, new { @class = "form-control" })
                     </div>
 
                 </div>
@@ -46,6 +53,11 @@
                     @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
                         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-10 col-md-offset-2">
+                        @captcha.RenderMarkup()
                     </div>
                 </div>
                 <div class="form-group">
@@ -70,10 +82,11 @@
     </div>
 </div>
 
-@section styles{
+@section Styles{
     <link href="~/Content/auth-buttons.css" rel="stylesheet" type="text/css">
 }
 
-@section scripts {
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @captcha.RenderScript()
 }
