Some more refinements to account signup

--- a/m4d/Views/Home/Contribute.cshtml
+++ b/m4d/Views/Home/Contribute.cshtml
@@ -8,7 +8,7 @@
 {
     <h2>Purchase a Subscription</h2>
     <p class="big-text">
-        We appreciate any amount that you're willing to contribute to the music4dance effort. Any contribution of $10 or more contributes to a year of our "premium" subscription, which gives you an ad-free experience.
+        We appreciate any amount that you're willing to contribute to the music4dance effort. Anyone who contribes ten dollars or more recieves a year of our "premium" subscription, which gives you an ad-free experience.
     </p>
 
     if (User.Identity.IsAuthenticated)
