--- a/m4d/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/m4d/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -6,8 +6,7 @@
     <h1>@ViewBag.Title</h1>
 </hgroup>
 <div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+    <p>Please check your email to reset your password.</p>
+    <p>If you don't see the email right away, check your junk or spam folder to see if it ended up in there instead.</p>
+    <p>If you still don't recieve email, please contact us directly at <a href="mailto:info@music4dance.net">info@music4dance.net</a></p>
 </div>
-	
