--- a/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/m4d/Views/ApplicationUsers/Index.cshtml
@@ -36,6 +36,14 @@
 <p><strong>Confirmed Users:</strong> @confirmedUsers</p>
 <p><strong>Deleted Users:</strong> @deletedUsers</p>
 <p>@Html.ActionLink("New Pseudo User", "Create", null, new { @class = "btn btn-default", role = "button" })</p>
+@if (ViewBag.ShowUnconfirmed)
+{
+    <p>@Html.ActionLink("Hide Unconfirmed", "Index", new { showUnconfirmed = false }, new { @class = "btn btn-default", role = "button" })</p>
+}
+else
+{
+    <p>@Html.ActionLink("Show Unconfirmed", "Index", new { showUnconfirmed = true }, new { @class = "btn btn-default", role = "button" })</p>
+}
 
 <table class="table table-striped">
     <tr><th>Service</th><th>Users</th><th>%u</th><th>%p</th></tr>
@@ -75,7 +83,7 @@
             </th>
         *@
         <th>
-            LOS
+            EC
         </th>
         <th>
             UserName
@@ -120,7 +128,7 @@
                 </td>
             *@
             <td>
-                @Html.DisplayFor(modelItem => item.LockoutEnabled)
+                @Html.DisplayFor(modelItem => item.EmailConfirmed)
             </td>
             <td>
                 @Html.ActionLink(item.UserName, "Details", new { id = item.Id }, new { @class = pseudoClass })
@@ -157,10 +165,12 @@
                 @Html.ActionLink("List Searches", "Index", "Searches", new { user = item.UserName, showDetails = true, sort = "recent" }, null) <br />
                 @Html.ActionLink("Change Roles", "ChangeRoles", new { id = item.Id }) <br />
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id }),
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }),
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+
                 @*
-                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
                 *@
             </td>
         </tr>
