Clean up TODOs + update the contribute page

--- a/m4d/Views/Home/Contribute.cshtml
+++ b/m4d/Views/Home/Contribute.cshtml
@@ -8,7 +8,7 @@
 {
     <h2>Purchase a Subscription</h2>
     <p class="big-text">
-        We appreciate any amount that you're willing to contribute to the music4dance effort. Anyone who contribes ten dollars or more recieves a year of our "premium" subscription, which gives you an ad-free experience.
+        We appreciate any amount that you're willing to contribute to the music4dance effort. Anyone who contribes ten dollars or more recieves a year of our <a href="https://www.music4dance.net/blog/music4dance-help/subscriptions/"></a>premium subscription, which always gives you an ad-free experience.  We will also be experimenting with specific premium features such as <a href="https://www.music4dance.net/blog/music4dance-help/bonus-content/">bonus content.</a>
     </p>
 
     if (User.Identity.IsAuthenticated)
