--- a/m4d/Views/Dance/Details.cshtml
+++ b/m4d/Views/Dance/Details.cshtml
@@ -59,7 +59,7 @@
         }
         @if (!string.IsNullOrWhiteSpace(Model.SpotifyPlaylist))
         {
-            <a href="#spotify-player" class="list-group-item">Spotify Player</a>
+            <a href="#spotify-player" class="list-group-item">@Model.DanceName Music on Spotify</a>
         }
         @if (Model.Parent == null)
         {
@@ -126,6 +126,7 @@
     if (!string.IsNullOrWhiteSpace(Model.SpotifyPlaylist))
     {
         <section id="spotify-player">
+            <H4>@Model.DanceName Spotify Playlist</H4>
             <iframe src="https://open.spotify.com/embed/user/ebo1rk39vp51kkyjps45eobph/playlist/@Model.SpotifyPlaylist" frameborder="0" width="300" height="80" allowtransparency="true" allow="encrypted-media" allow="encrypted-media"></iframe>
         </section>
     }
