Initial sketch of creating a spotify playlist

--- a/m4d/App_Code/SongHelper.cshtml
+++ b/m4d/App_Code/SongHelper.cshtml
@@ -102,7 +102,7 @@
     @(string.IsNullOrWhiteSpace(description) ? (filter.IsAdvanced ? AdvancedHeader(html, filter) : SimpleHeader(html, filter, dances, userName)) : CustomHeader(html, description))
 }
 
-@helper Footer(System.Web.Mvc.HtmlHelper html, UrlHelper urlHelp, PagedList.IPagedList<Song> songs, SongFilter filter, bool hideInferred = false, bool hideSpotify = false)
+@helper SearchFooter(System.Web.Mvc.HtmlHelper html, UrlHelper urlHelp, PagedList.IPagedList<Song> songs, SongFilter filter, bool hideInferred = false, bool hideSpotify = false)
 {
     var danceQuery = filter.DanceQuery;
 
@@ -163,6 +163,27 @@
                 @Spotify(songs)
             }
             <div class="col-md-6"><h4>@filter.Description</h4></div>
+        </div>
+}
+
+    if (!hideSpotify)
+    {
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Create a Spotify Playlist with the results of this search:</h4>
+                <p>If you are signed in have a premium account and have associated a Spotify account with your music4dance account, this will create a spotify playlist in your account with the top 50 results of the above search.</p>
+                @using (html.BeginForm("Song", "CreateSpotify", new { filter }, FormMethod.Post, new {id = "create-playlist", @class = "form-inline"}}))
+                {
+                @html.AntiForgeryToken()
+
+                <div class="form-group">
+                    <label for="playlist-title">Title:</label>
+                    <input type="text" name="title" class="form-control" id="playlist-title"/>
+                    <button type="submit" class="btn btn-default">Create</button>
+                </div>
+                }
+
+            </div>
         </div>
     }
 }
