--- a/m4d/Views/Song/HolidayMusic.cshtml
+++ b/m4d/Views/Song/HolidayMusic.cshtml
@@ -51,7 +51,7 @@ else
 {
     Html.RenderPartial("_ListSongs", Model, ViewData);
 
-    @SongHelper.Footer(Html, Url, Model, filter, true, true)
+    @SongHelper.SearchFooter(Html, Url, Model, filter, true, true)
 }
 
 <div style="height:10px"></div>
