--- a/m4d/App_Code/SongHelper.cshtml
+++ b/m4d/App_Code/SongHelper.cshtml
@@ -171,14 +171,14 @@
         <div class="row">
             <div class="col-md-12">
                 <h4>Create a Spotify Playlist with the results of this search:</h4>
-                <p>If you are signed in have a premium account and have associated a Spotify account with your music4dance account, this will create a spotify playlist in your account with the top 50 results of the above search.</p>
+                <p text="big-text">If you are <a href="https://www.music4dance.net/blog/music4dance-help/account-management/">signed in</a>, have a <a href="https://www.music4dance.net/blog/music4dance-help/subscriptions/">premium subsription</a> and have <a href="https://www.music4dance.net/blog/music4dance-help/account-management/#add-external-account">associated a Spotify account with your music4dance account</a>, this will create a spotify playlist in your account with the top 50 results of the above search.</p>
                 @using (html.BeginForm("CreateSpotify", "Song", new { filter }, FormMethod.Post, new {id = "create-playlist", @class = "form-inline"}))
                 {
                 @html.AntiForgeryToken()
 
                 <div class="form-group">
                     <label for="playlist-title">Title:</label>
-                    <input type="text" name="title" class="form-control" value="@filter.Description" style="width:300em" id="playlist-title"/>
+                    <input type="text" name="title" class="form-control" value="@(string.IsNullOrWhiteSpace(filter.ShortDescription) ? "music4dance playlist" : filter.ShortDescription)" style="width:300em" id="playlist-title"/>
                     <button type="submit" class="btn btn-default">Create</button>
                 </div>
                 }
