--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -13,6 +13,7 @@
 
     var userName = filter.UserQuery.IsEmpty ? User.Identity.Name : filter.UserQuery.UserName;
 
+    bool showExport = User.IsInRole("canEdit") || User.IsInRole("trial");
 }
 
 @Html.Partial("_SetupFilterScript")
@@ -55,7 +56,7 @@ else
     Html.RenderPartial("_ListSongs", @Model, ViewData);
 }
 
-@SongHelper.SearchFooter(Html, Url, Model, filter)
+@SongHelper.SearchFooter(Html, Url, Model, filter, false, false, showExport)
 
 @if (User.IsInRole("showDiagnostics") && ViewData.ContainsKey("RawSearch"))
 {
