--- a/m4d/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/m4d/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -24,8 +24,11 @@
                     @foreach (AuthenticationDescription p in loginProviders)
                     {
                         //<button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Sign in using your @p.Caption account">@p.AuthenticationType</button>
-                        var type = @p.AuthenticationType.ToLower();
-                        <li style="margin:1em"><button type="submit" class="btn-auth btn-@type large" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Sign in using your @p.Caption account">Sign in with <b>@p.AuthenticationType</b></button></li>
+                        var type = p.AuthenticationType.ToLower();
+                        if (type != "microsoft")
+                        {
+                            <li style="margin:1em"><button type="submit" class="btn-auth btn-@type large" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Sign in using your @p.Caption account">Sign in with <b>@p.AuthenticationType</b></button></li>
+                        }
                     }
                 </ul>
             </div>
