--- a/m4d/Views/Admin/UploadBackup.cshtml
+++ b/m4d/Views/Admin/UploadBackup.cshtml
@@ -107,7 +107,10 @@
     <li>@Html.ActionLink("Backup tail (yesterday & today)", "IndexBackup", new { from = (DateTime.Now - new TimeSpan(1, 0, 0, 0)).ToShortDateString() })</li>
 
     <h2>JSON Backup</h2>
-    <li>@Html.ActionLink("File", "DanceStatistics")</li>
+    <li>
+        @Html.ActionLink("File", "DanceStatistics")
+        (@Html.ActionLink("JS Friendly", "DanceStatistics", new { jsFriendly = true, save = false }, null), @Html.ActionLink("JSF No Songs", "DanceStatistics", new { jsFriendly = true, noSongs = true, save = false }, null))
+    </li>
     <li>@Html.ActionLink("BasicA", "DanceStatistics", new { source = "basica", save = false }, null) (@Html.ActionLink("Save", "DanceStatistics", new { source = "basica", save = true }, null)) (@Html.ActionLink("TagsOnly", "DanceStatistics", new { source = "basica", save = true, noDances=true }, null))</li>
     <li>@Html.ActionLink("BasicB", "DanceStatistics", new { source = "basicb", save = false }, null) (@Html.ActionLink("Save", "DanceStatistics", new { source = "basicb", save = true }, null)) (@Html.ActionLink("TagsOnly", "DanceStatistics", new { source = "basicb", save = true, noDances = true }, null))</li>
     <li>@Html.ActionLink("BasicC", "DanceStatistics", new { source = "basicc", save = false }, null) (@Html.ActionLink("Save", "DanceStatistics", new { source = "basicc", save = true }, null)) (@Html.ActionLink("TagsOnly", "DanceStatistics", new { source = "basicc", save = true, noDances = true }, null))</li>
